Adjust spacing issues

--- a/src/components/Splash/splash.sass
+++ b/src/components/Splash/splash.sass
@@ -12,7 +12,7 @@
     display: flex
     gap: 6px
     top: 45%
-    left: 54%
+    left: 50%
     color: white
     transform: translate(-50%, -50%)
     font-size: 2rem
